--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "vite": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
