--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "serve": "npx serve dist",
     "start": "npm run dev",
     "dev": "vite",
     "build": "vite build",
